# verity-rag

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
evals/: __init__.py  answerer.py  golden.jsonl  judge.py  metrics.py  run_evals.py  thresholds.py
evals/sample_notes/: 01-geography-and-monsoon.md  02-indus-valley-civilization.md  03-religions.md  04-mughal-empire.md  05-british-colonial-rule.md  06-independence-and-partition.md
src/verity/: __init__.py  chunking.py  cli.py  config.py  corpus.py  embeddings.py  interfaces.py  models.py  pipeline.py  telemetry.py
src/verity/agent/: __init__.py  loop.py  tools.py
src/verity/api/: __init__.py  app.py
src/verity/llm/: __init__.py  extractive.py  fake.py  ollama.py
src/verity/retrieval/: __init__.py  hybrid.py  rerank.py
src/verity/store/: __init__.py  bm25.py  memory.py  pgvector.py
tests/: conftest.py  test_agent_pipeline.py  test_bm25.py  test_chunking.py  test_corpus_api.py  test_embeddings_store.py  test_eval_gate.py  test_extractive_model.py  test_fusion.py  test_metrics_judge.py
