[project]
name = "verity"
version = "0.1.0"
description = "An eval-driven, agentic Retrieval-Augmented Generation platform with hybrid search, cross-encoder reranking, and CI-gated offline evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Verity contributors" }]
keywords = [
    "rag",
    "retrieval-augmented-generation",
    "agents",
    "llm",
    "hybrid-search",
    "vector-database",
    "reranking",
    "evaluation",
    "llm-as-judge",
    "observability",
]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "httpx>=0.27",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
]

[project.optional-dependencies]
# Heavy ML / serving deps are optional so the core library and the full eval
# suite remain importable and testable in CI without downloading models.
ml = [
    "sentence-transformers>=2.7",
    "torch>=2.2",
]
store = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.2.5",
]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
verity = "verity.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/verity"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src/verity"]

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"
